# recenter_tc

./: .cspell.json  .gitignore  CHANGELOG.md  CHANGELOG.rst  CHANGELOG_sector_adjusters.rst  README.md  pyproject.toml  setup.py  setup.sh  testfile
.github/workflows/: lint.yaml
docs/archive/: CHANGELOG.md
docs/source/recenter_tc_api/: index.rst
docs/source/releases/: CHANGELOG.md  index.rst  v1_10_0.rst  v1_10_0a0.rst  v1_10_0a1.rst  v1_10_0a2.rst  v1_10_2.rst  v1_10_3.rst  v1_11_0.rst  v1_11_2.rst  v1_11_5a0.rst  v1_11_7.rst  v1_11_7a0.rst  v1_12_2.rst  v1_12_2a0.rst  v1_12_3.rst  v1_13_0.rst  v1_7_0.rst  v1_8_0.rst  v1_8_1.rst  v1_9_1.rst
docs/source/userguide/: index.rst
recenter_tc/: __init__.py  compare_outputs_recenter_tc.py  version.py
recenter_tc/filenames/: __init__.py  base_paths.py
recenter_tc/interface_modules/area_def_adjusters/: recenter_tc.py
recenter_tc/interface_modules/filename_formats/: archer_fix.py  archer_image.py
recenter_tc/plugins/: __init__.py
recenter_tc/plugins/modules/: __init__.py
tests/: test_all.sh
tests/integration_tests/: test_recenter_tc.py
tests/outputs/abi.tc.Visible.imagery_clean/: 20200918_195020_AL202020_abi_goes-16_Visible_110kts_100p00_res1p0-arB03Ref-clean.png.yaml
tests/outputs/ahi.tc.IR-BD.imagery_clean/: 20200405_000000_SH252020_ahi_himawari-8_IR-BD_100kts_100p00_res1p0-arB13BT-clean.png.yaml
tests/outputs/ahi_IR-BD/: 20200405_000000_SH252020_ahi_himawari-8_IR-BD_100kts_100p00_res1p0-arB13BT-clean.png.yaml
tests/outputs/amsr2.tc.color37.imagery_clean/: 20200518_073604_IO012020_amsr2_gcom-w1_color37_142kts_99p86_res1p0-artb36h-clean.png.yaml
tests/outputs/amsr2.tc.windspeed.imagery_clean/: 20200518_073604_IO012020_amsr2_gcom-w1_windspeed_142kts_85p08_res1p0-akima-clean.png.yaml
tests/outputs/amsr2_windspeed/: 20200518_073604_IO012020_amsr2_gcom-w1_windspeed_142kts_85p08_res1p0-akima-clean.png.yaml
tests/outputs/amsua_mhs_mirs.tc.89V.imagery_clean/: 20210419_235400_WP022021_mhs_metop-a_89V_115kts_100p00_res1p0-arChan1_AT-clean.png.yaml
tests/outputs/amsub_hdf.tc.157V.imagery_clean/: 20200513_215200_WP012020_amsu-b_noaa-19_157V_96kts_87p15_res1p0-akima-clean.png.yaml
tests/outputs/amsub_mirs.tc.89V.imagery_clean/: 20210419_235400_WP022021_amsu-b_metop-a_89V_115kts_100p00_res1p0-arChan1_AT-clean.png.yaml
tests/outputs/ascat_uhr.tc.nrcs.imagery_clean/: 20210421_014200_WP022021_ascatuhr_metop-c_nrcs_120kts_98p21_res1p0-cr300-akima-clean.png.yaml
tests/outputs/ascat_uhr.tc.windbarbs.imagery_clean/: 20210421_014200_WP022021_ascatuhr_metop-c_windbarbs_120kts_100p00_res0p1-akima-clean.png.yaml
tests/outputs/ascat_uhr_windbarbs/: 20210421_014200_WP022021_ascatuhr_metop-c_windbarbs_120kts_100p00_res0p1-akima-clean.png.yaml
tests/outputs/gmi.tc.89pct.imagery_clean/: 20200917_172047_AL202020_gmi_GPM_89pct_113kts_17p67_res1p0-arH89-clean.png.yaml
tests/outputs/hy2b.tc.windspeed.imagery_clean/: 20211202_084043_WP272021_hscat_hy-2b_windspeed_100kts_98p29_res1p0-akima-clean.png.yaml
tests/outputs/hy2b_windspeed/: 20211202_084043_WP272021_hscat_hy-2b_windspeed_100kts_98p29_res1p0-akima-clean.png.yaml
tests/outputs/imerg.tc.Rain.imagery_clean/: 20200917_170000_AL202020_imerg_GPM_Rain_113kts_36p43_res1p0-akima-clean.png.yaml
tests/outputs/imerg_Rain/: 20200917_170000_AL202020_imerg_GPM_Rain_113kts_36p43_res1p0-akima-clean.png.yaml
tests/outputs/metopc_knmi_125.tc.windbarbs.imagery_clean/: 20210421_014245_WP022021_ascat_metop-c_windbarbs_120kts_77p14_res0p5-akima-clean.png.yaml
tests/outputs/modis.tc.Infrared.imagery_clean/: 20210104_201500_SH082021_modis_aqua_Infrared_55kts_100p00_res1p0-akima-clean.png.yaml
tests/scripts/: abi.sh  abi.tc.Visible.imagery_clean.sh  ahi.sh  ahi.tc.IR-BD.imagery_clean.sh  amsr2.sh  amsr2.tc.color37.imagery_clean.sh  amsr2.tc.windspeed.imagery_clean.sh  amsr2_winds.sh  amsua_mhs_mirs.tc.89V.imagery_clean.sh  amsub_hdf.sh  amsub_hdf.tc.157V.imagery_clean.sh  amsub_mirs.sh  amsub_mirs.tc.89V.imagery_clean.sh  ascat_uhr.sh  ascat_uhr.tc.nrcs.imagery_clean.sh  ascat_uhr.tc.windbarbs.imagery_clean.sh  ascat_uhr_nrcs.sh  atms.sh  atms.tc.165H.imagery_clean.sh  gmi.sh  gmi.tc.89pct.imagery_clean.sh  hy2.sh  hy2b.tc.windspeed.imagery_clean.sh  imerg.sh  imerg.tc.Rain.imagery_clean.sh  metopc_knmi_125.sh  metopc_knmi_125.tc.windbarbs.imagery_clean.sh  modis.sh  modis.tc.Infrared.imagery_clean.sh  oscat.sh  oscat.tc.windspeed.imagery_clean.sh  saphir.sh  saphir.tc.183-3H.imagery_clean.sh  sar.sh  sar.tc.nrcs.imagery_clean.sh  smap.sh  smap.tc.windspeed.imagery_clean.sh  smos.sh  smos.tc.windspeed.imagery_clean.sh  ssmi.sh  (+6 more)
(+58 files in other folders)
