[build-system]
requires = ["setuptools>=61.2", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.package-data]
"*" = [
    "plugins/*.yaml",
    "plugins/*/*.yaml",
    "plugins/*/*/*.yaml",
    "plugins/*/*/*/*.yaml",
    "plugins/*/*/*/*/*.yaml",
    "plugins/*.txt",
    "plugins/*/*.txt",
    "plugins/*/*/*.txt",
    "plugins/*/*/*/*.txt",
    "plugins/*/*/*/*/*.txt",
]

[tool.setuptools.dynamic]
entry-points = {file = ["entry-points.ini"]}

[tool.setuptools_scm]
"version_scheme" = "post-release"  # Use current version .postN vs incrementing
"local_scheme" = "no-local-version"  # Don't include hash, or date, just postN
"write_to" = "recenter_tc/_version.py"  # Write an actual file

[project]
name = "recenter_tc"
authors = []
description = "TC Recentering GeoIPS Plugin Package"
readme = "README.md"
requires-python = ">=3.9"
keywords = []
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]

dependencies = [
    "archer @ git+https://github.com/ajwimmers/archer.git",
    "akima86 @ git+https://github.com/NRLMMD-GEOIPS/akima86.git"
]

[project.entry-points."geoips.plugin_packages"]
"recenter_tc" = "recenter_tc"

[project.entry-points."geoips.sector_adjusters"]
"recenter_tc" = "recenter_tc.plugins.modules.sector_adjusters.recenter_tc"

[project.entry-points."geoips.filename_formatters"]
"archer_fix" = "recenter_tc.plugins.modules.filename_formatters.archer_fix"
"archer_image" = "recenter_tc.plugins.modules.filename_formatters.archer_image"

[project.entry-points."geoips.output_comparisons"]
"compare_outputs_recenter_tc" = "recenter_tc.compare_outputs_recenter_tc:compare_outputs_recenter_tc"

