[tool.poetry]
name = "recenter_tc"                                          # geoips package available at the root of the project
version = "0.0.0"
description = "recenter_tc GeoIPS Plugin Package"
authors = []
readme = "README.md"
keywords = []
license = "LICENSE"   # required
classifiers = [ # // list of PyPI trove classifiers to describe the project
    "Programming Language :: Python :: 3",
]
repository = "https://github.com/NRLMMD-GEOIPS/recenter_tc" #optional
#documentation = "set the url"
include = ["**/*.txt", "**/*.py", "**/*.yaml"]

# uses current version .postN and not incrementing
[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
metadata = false # don't include local-version hash; date doesn't appear by deafult
style = "pep440" # pep440 is default; can rmeove later on; used for : keeping 0.0.8 as the default install until 0.0.9 is out
#style = "semver"
#tag-branch = "feature-poetry"
strict = false
pattern = "(?x)^((?P<epoch>\\d+)!)?(?P<base>\\d+(\\.\\d+)*)([-._]?((?P<stage>[a-zA-Z]+)[-._]?(?P<revision>\\d+)?))?(\\+(?P<tagged_metadata>.+))?$"

[tool.poetry-dynamic-versioning.substitution]
files = ["*/_version.py"]

# This is where you would specify a pre-build script from pyproject.toml/poetry.
# [tool.poetry.build]
# generate-setup-file = false  # I have no idea what this does
# script = "build.py"  # This gets called as a python script prior to running build steps

[build-system]
# includes setuptools<70 here in recenter_tc to ensure it is available
# for akima build
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"                          # object used to perform the build process

[tool.poetry.dependencies] # must download to run
python = ">=3.10"       # mandatory to declare the required python version
# Once meson build is working, use pypi akima86
# akima86 = "*"
# NOTE: setuptools<70 required for distutils.core import in akima86.
# When akima is updated to use meson build, this will no longer be an issue,
# but for now we are requiring setuptools<70 in the main geoips dependencies,
# which ensures we have setuptools<70 at this point.  Requiring setuptools<70
# in recenter_tc dependencies didn't even work (still was using v74 from the
# geoips install in akima86), but requiring setuptools<70 in geoips and nowhere else
# worked.  We need to remember to remove the setuptools<70 dependency in
# geoips pyproject.toml as soon as we resolve the meson builds for all the
# fortran-based plugins.
archer = { git = "https://github.com/mindyls/archer.git" }
akima86 = "*"

[tool.poetry.plugins."geoips.plugin_packages"]
"recenter_tc" = "recenter_tc"
